--- a/src/main/resources/templates/auth-login.html
+++ b/src/main/resources/templates/auth-login.html
@@ -5,11 +5,11 @@
 
 <head>
     <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" type="text/css" href="https://bid.cars/vendor/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="https://bid.newCars/vendor/bootstrap/css/bootstrap.min.css">
 
-    <link rel="icon" type="image/png" href="images/vintage-car-png.web">
+    <link rel="icon" type="image/png" href="images/vintage-newCar-png.web">
 
-    <link rel="stylesheet" type="text/css" href="https://bid.cars/css/style.css">
+    <link rel="stylesheet" type="text/css" href="https://bid.newCars/css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" />
     <link rel="stylesheet" type="back" href="https://developer.mozilla.org/docs/Web/CSS/background-image">
     <meta charset="UTF-8"/>
@@ -147,7 +147,7 @@
 </section>
 
 
-<script class="iti-load-utils" async="" src="https://bid.cars/build/js/utils-tel.js"></script>
+<script class="iti-load-utils" async="" src="https://bid.newCars/build/js/utils-tel.js"></script>
 </body>
 <grammarly-desktop-integration data-grammarly-shadow-root="true"></grammarly-desktop-integration>
 
