--- a/src/main/resources/templates/detachable-info.html
+++ b/src/main/resources/templates/detachable-info.html
@@ -52,7 +52,7 @@
                 BEST SELLING TOWBAR SYSTEM
             </h3>
             <p>
-                The detachable towbar has benefited from the trend towards more elegant visual lines on cars. Once the
+                The detachable towbar has benefited from the trend towards more elegant visual lines on newCars. Once the
                 tow ball neck is removed, only a small part of the towbar remains visible. Detachable towbars are
                 available in two styles - vertically and horizontally detachable.
             </p>
