--- a/src/main/resources/templates/retractable-info.html
+++ b/src/main/resources/templates/retractable-info.html
@@ -78,11 +78,11 @@
                     <div class="csc-textpic-text">
                         <ul>
                             <li><strong>Compact:</strong> The compact construction and special retractable mechanism
-                                make these towbars compatible even for cars with limited available space behind the
+                                make these towbars compatible even for newCars with limited available space behind the
                                 bumper.
                             </li>
                             <li><strong>Convenience:</strong> The plug on the ball neck makes it easy to wire the
-                                trailer or bike carrier into the car's electrical system.
+                                trailer or bike carrier into the newCar's electrical system.
                             </li>
                             <li><strong>Immediately ready for use & almost invisible:</strong>: The towbar releases in
                                 seconds when needed — the rest of the time it is hidden and stored behind the bumper.
